--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
     config:
       server:
         native:
-          search-locations: "classpath:/config"
+#          search-locations: "classpath:/config"
+          search-locations: "file:///F:/config"
 
 server:
   port: 8071
