--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -6,9 +6,15 @@ spring:
   cloud:
     config:
       server:
-        native:
+#        native:
 #          search-locations: "classpath:/config"
-          search-locations: "file:///F:/config"
+#          search-locations: "file:///F:/config"
+        git:
+          uri: "https://github.com/AnThanhPham/atp-config"
+          default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
 
 server:
   port: 8071
