--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -17,7 +17,6 @@ spring:
       ddl-auto: update
     show-sql: true
   profiles:
-    active:
-      - "prod"
+    active: default
   config:
     import: "optional:configserver:http://localhost:8071/"
