--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -21,3 +21,9 @@ spring:
     name: "cards"
   config:
     import: optional:configserver:http://localhost:8071/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
