--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   application:
     name: "configserver"
   profiles:
-    active: "native"
+#    active: "native"
+    active: git
   cloud:
     config:
       server:
@@ -10,14 +11,22 @@ spring:
 #          search-locations: "classpath:/config"
 #          search-locations: "file:///F:/config"
         git:
-          uri: "https://github.com/AnThanhPham/atp-config"
+          uri: "https://github.com/AnThanhPham/atp-config.git"
           default-label: main
           timeout: 5
           clone-on-start: true
           force-pull: true
+          username: "AnThanhPham"
+          password: "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"
 
 encrypt:
   key: "45D81EC1EF61DF9AD8D3E5BB397F9"
 
 server:
   port: 8071
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
