--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -97,10 +97,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.2</version>
                 <configuration>
-                    <image>
-                        <name>thanhan2403/${project.artifactId}:1.0</name>
-                    </image>
+                    <to>
+                        <image>thanhan2403/${project.artifactId}:s6</image>
+                    </to>
                 </configuration>
             </plugin>
             <plugin>
