--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -108,7 +108,7 @@
                 <version>3.4.2</version>
                 <configuration>
                     <to>
-                        <image>thanhan2403/${project.artifactId}:1.0</image>
+                        <image>thanhan2403/${project.artifactId}:s6</image>
                     </to>
                 </configuration>
             </plugin>
