--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -53,10 +53,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -104,7 +103,7 @@
                 <version>3.4.2</version>
                 <configuration>
                     <to>
-                        <image>thanhan2403/${project.artifactId}:s6</image>
+                        <image>thanhan2403/${project.artifactId}:s7</image>
                     </to>
                 </configuration>
             </plugin>
