--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -36,3 +36,15 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      access: unrestricted
+  info:
+    env:
+      enabled: true
+
+info:
+  app:
+    name: "cards"
+    description: "ATP Bank Cards Application"
+    version: "1.0.0"
