--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   accountsdb:
     container_name: accountsdb
     ports:
-      - 3306:3306
+      - 3309:3306
     environment:
       MYSQL_DATABASE: accountsdb
     extends:
@@ -46,7 +46,7 @@ services:
       service: microservice-db-config
 
   configserver:
-    image: "thanhan2403/configserver:s7"
+    image: "thanhan2403/configserver:s8"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -63,8 +63,26 @@ services:
       file: common-config.yml
       service: microservice-base-config
 
+  eurekaserver:
+    image: "thanhan2403/eurekaserver:s8"
+    container_name: eurekaserver-ms
+    ports:
+      - "8070:8070"
+    depends_on:
+      configserver:
+        condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    extends:
+      file: common-config.yml
+      service: microservice-base-eureka-config
+
   accounts:
-    image: "thanhan2403/accounts:s7"
+    image: "thanhan2403/accounts:s8"
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -72,6 +90,8 @@ services:
       configserver:
         condition: service_healthy
       accountsdb:
+        condition: service_healthy
+      eurekaserver:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "accounts"
@@ -81,7 +101,7 @@ services:
       service: microservice-configserver-config
 
   loans:
-    image: "thanhan2403/loans:s7"
+    image: "thanhan2403/loans:s8"
     container_name: loans-ms
     ports:
       - "8090:8090"
@@ -89,6 +109,8 @@ services:
       configserver:
         condition: service_healthy
       loansdb:
+        condition: service_healthy
+      eurekaserver:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
@@ -98,7 +120,7 @@ services:
       service: microservice-configserver-config
 
   cards:
-    image: "thanhan2403/cards:s7"
+    image: "thanhan2403/cards:s8"
     container_name: cards-ms
     ports:
       - "9000:9000"
@@ -106,6 +128,8 @@ services:
       configserver:
         condition: service_healthy
       cardsdb:
+        condition: service_healthy
+      eurekaserver:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
