implement cross cutting concern Tracing and Logging using Gateway

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -48,3 +48,9 @@ info:
     description: "ATP Bank Accounts Application"
     version: "1.0.0"
 
+logging:
+  level:
+    com:
+      atp:
+        accounts: DEBUG
+
