--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -48,3 +48,9 @@ info:
     name: "loans"
     description: "ATP Bank Loans Application"
     version: "1.0.0"
+
+logging:
+  level:
+    com:
+      atp:
+        loans: DEBUG
