--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -15,6 +15,18 @@ services:
       file: common-config.yml
       service: network-deploy-service
 
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      timeout: 10s
+      retries: 10
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   accountsdb:
     container_name: accountsdb
     ports:
@@ -46,7 +58,7 @@ services:
       service: microservice-db-config
 
   configserver:
-    image: "thanhan2403/configserver:s9"
+    image: "thanhan2403/configserver:s10"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -64,7 +76,7 @@ services:
       service: microservice-base-config
 
   eurekaserver:
-    image: "thanhan2403/eurekaserver:s9"
+    image: "thanhan2403/eurekaserver:s10"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -82,7 +94,7 @@ services:
       service: microservice-base-eureka-config
 
   accounts:
-    image: "thanhan2403/accounts:s9"
+    image: "thanhan2403/accounts:s10"
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -107,7 +119,7 @@ services:
       service: microservice-configserver-config
 
   loans:
-    image: "thanhan2403/loans:s9"
+    image: "thanhan2403/loans:s10"
     container_name: loans-ms
     ports:
       - "8090:8090"
@@ -132,7 +144,7 @@ services:
       service: microservice-configserver-config
 
   cards:
-    image: "thanhan2403/cards:s9"
+    image: "thanhan2403/cards:s10"
     container_name: cards-ms
     ports:
       - "9000:9000"
@@ -157,7 +169,7 @@ services:
       service: microservice-configserver-config
 
   gatewayserver:
-    image: "thanhan2403/gatewayserver:s9"
+    image: "thanhan2403/gatewayserver:s10"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
@@ -168,8 +180,14 @@ services:
         condition: service_healthy
       cards:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
+      SPRING_DATA_REDIS_CONNECT-TIMEOUT: 2s
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_TIMEOUT: 1s
     extends:
       file: common-config.yml
       service: microservice-configserver-config
