--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -98,8 +98,9 @@
             <artifactId>spring-web</artifactId>
         </dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
