tracing with opentelemtry + tempo

--- a/docker-compose/observability/grafana/datasource.yml
+++ b/docker-compose/observability/grafana/datasource.yml
@@ -3,6 +3,7 @@ apiVersion: 1
 deleteDatasources:
   - name: Loki
   - name: Prometheus
+  - name: Tempo
 
 datasources:
   - name: Loki
@@ -14,6 +15,11 @@ datasources:
     url: http://gateway:3100
     jsonData:
       httpHeaderName1: "X-Scope-OrgID"
+      derivedFields:
+        - datasourceUid: tempo
+          matcherRegex: "\\[.+,(.+),.+\\]"
+          name: TraceID
+          url: '$${__value.raw}'
     secureJsonData:
       httpHeaderValue1: "tenant1"
   - name: Prometheus
@@ -28,3 +34,17 @@ datasources:
     editable: true
     jsonData:
       httpMethod: GET
+  - name: Tempo
+    type: tempo
+    uid: tempo
+    url: http://tempo:3100
+    access: proxy
+    orgId: 1
+    basicAuth: false
+    isDefault: false
+    version: 1
+    editable: true
+    jsonData:
+      httpMethod: GET
+      serviceMap:
+        datasourceUid: 'prometheus'
