--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -55,6 +55,9 @@ management:
   info:
     env:
       enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 info:
   app:
@@ -67,3 +70,5 @@ logging:
     com:
       atp:
         loans: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
