--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
     openfeign:
       circuitbreaker:
         enabled: true
+    stream:
+      bindings:
+        sendCommunication-out-0:
+          destination: send-communication
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -29,6 +33,7 @@ spring:
     port: 5672
     username: "guest"
     password: "guest"
+    connection-timeout: 10s
 
 eureka:
   instance:
