kafka with event driven

--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -14,6 +14,25 @@ services:
     extends:
       file: common-config.yml
       service: network-deploy-service
+  
+  kafka:
+    image: docker.io/bitnami/kafka:3.9
+    ports:
+      - "9092:9092"
+    environment:
+      # KRaft settings
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      # Listeners
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
 
   redis:
     image: redis
@@ -257,7 +276,7 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "thanhan2403/configserver:s13"
+    image: "thanhan2403/configserver:s14"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -277,7 +296,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
-    image: "thanhan2403/eurekaserver:s13"
+    image: "thanhan2403/eurekaserver:s14"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -298,7 +317,7 @@ services:
       OTEL_SERVICE_NAME: "eurekaserver"
 
   accounts:
-    image: "thanhan2403/accounts:s13"
+    image: "thanhan2403/accounts:s14"
     container_name: accounts-ms
     depends_on:
       configserver:
@@ -316,12 +335,13 @@ services:
     environment:
       SPRING_APPLICATION_NAME: "accounts"
       OTEL_SERVICE_NAME: "accounts"
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
 
   loans:
-    image: "thanhan2403/loans:s13"
+    image: "thanhan2403/loans:s14"
     container_name: loans-ms
     healthcheck:
       test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
@@ -344,7 +364,7 @@ services:
       service: microservice-configserver-config
 
   cards:
-    image: "thanhan2403/cards:s13"
+    image: "thanhan2403/cards:s14"
     container_name: cards-ms
     healthcheck:
       test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
@@ -367,19 +387,19 @@ services:
       service: microservice-configserver-config
 
   message:
-    image: "thanhan2403/message:s13"
+    image: "thanhan2403/message:s14"
     container_name: message-ms
     depends_on:
       rabbit:
         condition: service_healthy
     environment:
-      SPRING_RABBITMQ_HOST: "rabbit"
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
     extends:
       file: common-config.yml
       service: network-deploy-service
 
   gatewayserver:
-    image: "thanhan2403/gatewayserver:s13"
+    image: "thanhan2403/gatewayserver:s14"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
