--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
           group: ${spring.application.name}
         sendCommunication-out-0:
           destination: send-communication
+      kafka:
+        binder:
+          brokers:
+            - localhost:9092
+      default-binder: kafka
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
